# satsfort

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  LICENSE.md  README.md  TODO.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.wdio.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
src/: App.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V001__create_address_and_portfolio_tables.sql  V001__create_address_tables.sql  V001__create_holdings.sql  V002__create_address_tables.sql  V002__create_historical_prices.sql  V002__create_historical_prices_tables.sql  V002__create_tracked_addresses.sql  V003__create_tracked_xpubs.sql  V003__create_transactions.sql  V003__create_transactions_tables.sql  V004__create_transactions.sql
src-tauri/src/: app_state.rs  db_query.rs  lib.rs  main.rs  migrations.rs  sqlcipher.rs  vault_status.rs
src-tauri/src/commands/: change_vault_password_command.rs  db_execute_command.rs  db_select_command.rs  get_vault_status_command.rs  lock_db_command.rs  mod.rs  unlock_db_command.rs  wipe_local_data_command.rs
src-tauri/src/server/: config.rs  handlers.rs  mod.rs  proxy.rs  router.rs
src-tauri/src/structs/: app_state.rs  mod.rs  vault_status.rs
src-tauri/src/utils/: db_query.rs  migrations.rs  mod.rs  sqlcipher.rs
src-tauri/tests/commands/: change_vault_password_command_tests.rs  db_execute_command_tests.rs  db_select_command_tests.rs  get_vault_status_command_tests.rs  lock_db_command_tests.rs  unlock_db_command_tests.rs  wipe_local_data_command_tests.rs
src-tauri/tests/common/: mod.rs
(+120 files in other folders)
