[package]
name = "sats-fort-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "SatsFort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sats_fort_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "SatsFort"
path = "src/main.rs"

[[bin]]
name = "satsfort-server"
path = "src/bin/server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }

[dependencies.libsqlite3-sys]
version = "0.30"
features = ["bundled-sqlcipher-vendored-openssl"]

[features]
# Enabled by `tauri build` — embeds the frontend assets and serves them via
# the custom tauri:// protocol instead of loading `devUrl`. Required for any
# release/cargo-build scenario where the vite dev server isn't running.
custom-protocol = ["tauri/custom-protocol"]

